# C-Snake

./: CMakeLists.txt  TODO.md  main.c  run_cmake.ps1
